First sketch of chapters.

--- a/src/index.qmd
+++ b/src/index.qmd
@@ -5,10 +5,11 @@ This Quarto book documents some of the ways I like to use Quarto for [e-books](b
 Search engines are extremely useful tools for answering similar questions.
 Here, I try to capture specific implementations that I have found useful in my own work.
 
-::: {.callout-note}
+In fairness to Quarto, this site has more to do with *my* quirks than Quarto's.
+But I liked the alliteration.
 
+::: {.callout-note}
 I now use Quarto regularly.
 But there are many, many things I do not yet know about how to use it most
 effectively.
-
 :::
