--- a/src/slides.qmd
+++ b/src/slides.qmd
@@ -1,1 +1,24 @@
 # Slides
+
+This page describes some practices I use when generating RevealJS slide decks.
+
+## GitHub repo
+
+For many years, I have made separate repositories for each talk.
+Course lectures are a special case.
+I'll talk about them later.
+
+So, my talk to the Central Pennsylvania Observers (CPO) astronomy club sits
+under a repo titled 'cpo-talk-radio-astronomy' that resides under my
+'rogilmore' GitHub account.
+I've set-up that account to host my blog, and so this means that this talk
+lives at `rick-gilmore.com/cpo-talk-radio-astronomy`.
+This talk should probably have had a date.
+
+The single repo per talk scheme works well in this case, and it involves
+a simpler file directory organization on my local machine.
+I do not create separate `src/` and `docs/` directories, nor is a `_quarto.yml`
+file needed.
+I simply create `index.qmd`, and an `include/` directory, then render the output
+to the project root.
+
