Add error bars section to plots.qmd; fix link to PSYCH 490 in index.qmd.

--- a/src/index.qmd
+++ b/src/index.qmd
@@ -1,6 +1,6 @@
 # About
 
-This Quarto book documents some of the ways I like to use Quarto for [e-books](books.qmd), talk [slides](slides.qmd), and [websites](sites.qmd).
+This Quarto book documents some of the ways I like to use Quarto for [e-books](books.qmd), talk [slides](slides.qmd), [websites](sites.qmd), and [plots](plots.qmd).
 
 Search engines are extremely useful tools for answering similar questions.
 Here, I try to capture specific implementations that I have found useful in my own work.
@@ -12,4 +12,5 @@ But I liked the alliteration.
 I now use Quarto regularly.
 But there are many, many things I do not yet know about how to use it most
 effectively.
+And I find that it's easy to forget things I've figured out some months prior.
 :::
