--- a/src/meta.qmd
+++ b/src/meta.qmd
@@ -81,6 +81,29 @@ I find it much easier to load the library via `library(ggplot2)`, and then
 use the associated commands.
 :::
 
+### Includes
+
+Following some other expert I don't recall, I like to create an `includes/` directory under `src/` where I put the following directories:
+
+- `bib`: for bibliographic files, e.g., `refs.bib`, and any `.csl` files.
+- `img`: for images I use as resources.
+- `fig`: for figures the code generates.
+- `css`: for CSS files.
+
+To make the `fig/` directory work properly, add the following YAML parameters to the site-wide or directory specific (`_metadata.yml`) file:
+
+```yaml
+knitr:
+  opts_chunk:
+    fig.path: include/fig/
+```
+
+::: {.callout-important}
+
+The final slash (/) in the figure path (`fig.path`) parameter above is *critical*. If you omit it, each file name will include a prepended `fig` that you probably do not want.
+
+:::
+
 ## Create _quarto.yml
 
 The `_quarto.yml` files have specific parameters for each type of output.
@@ -89,7 +112,7 @@ Note that when using a `src/` and `docs/` directory as described above,
 the `output-dir` parameter must be specified to give the path to the `docs/`
 directory from the `src/_quarto.yml` file.
 
-```
+```yaml
 project:
   type: book
   output-dir: "../docs"
