--- a/src/include/bib/refs.bib
+++ b/src/include/bib/refs.bib
@@ -1,3 +1,13 @@
+@MISC{James2020-kf,
+  title     = "Bridge Over Troubled Water by Simon and Garfunkel (Morgan James
+               Cover)",
+  author    = "James, Morgan",
+  publisher = "Youtube",
+  month     =  may,
+  year      =  2020,
+  url       = "https://www.youtube.com/watch?v=yWy-wqRtFiI"
+}
+
 @ARTICLE{Doyen2012-ib,
   title    = "Behavioral priming: it's all in the mind, but whose mind?",
   author   = "Doyen, St{\'e}phane and Klein, Olivier and Pichon, Cora-Lise and
